<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_gray_ai"
    android:paddingHorizontal="32dp"
    android:paddingTop="48dp"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/onboarding_image"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/ic_smart_sensor"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/onboarding_image_desc_sensor" />

    <TextView
        android:id="@+id/onboarding_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_title_2"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/deep_navy"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/onboarding_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="56dp" />

    <TextView
        android:id="@+id/onboarding_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_desc_2"
        android:textSize="16sp"
        android:textColor="@color/deep_navy"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/onboarding_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>